# sgf

./: .clang-format  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.github/workflows/: cmake-multi-platform.yml
cmake/: sgf_runtime.cmake  sgf_test.cmake
example/: CMakeLists.txt  main.cpp
examples/: CMakeLists.txt  get_default_font.hpp
examples/hello_sgf/: CMakeLists.txt  hello_sgf.cpp
include/base/: font.hpp  renderer.hpp  surface.hpp
include/base/window/: window.hpp  window_info.hpp
include/sgf/: input_system.hpp  kernel.hpp
include/sgf/animation/: clip.hpp  player.hpp
include/sgf/base/: font.hpp  renderer.hpp  texture.hpp  viewport.hpp
include/sgf/base/audio/: audio.hpp  mixer.hpp  track.hpp
include/sgf/base/guard/: audio_system.hpp  font_system.hpp  video_system.hpp
include/sgf/base/window/: window.hpp  window_event.hpp  window_info.hpp
include/sgf/resources/: atlas.hpp  manager.hpp  sprite.hpp
include/sgf/tool/: test.hpp
include/sgf/type/: color.hpp  position.hpp  rect.hpp  size.hpp  vec2.hpp
include/sgf/type/base/: tags.hpp  vector2.hpp
src/: CMakeLists.txt  input_system.cpp
src/animation/: player.cpp
src/base/: CMakeLists.txt
src/base/SDL3_impl/: CMakeLists.txt  font.cpp  renderer.cpp  surface.cpp  texture.cpp  window.cpp
src/base/SDL3_impl/utils/: convert.hpp
src/base/SDL_impl/: CMakeLists.txt  audio.cpp  audio_system.cpp  font.cpp  font_system.cpp  mixer.cpp  renderer.cpp  surface.cpp  texture.cpp  track.cpp  video_system.cpp  window.cpp
src/base/SDL_impl/utils/: convert.hpp
src/resources/: atlas.cpp  manager.cpp
tests/: CMakeLists.txt
tests/smoke/: CMakeLists.txt  audio_smoke.cpp  font_smoke.cpp  mixer_smoke.cpp  renderer_smoke.cpp  sgf_smoke_test.cpp  surface_smoke.cpp  texture_smoke.cpp  track_smoke.cpp  window_smoke.cpp
tests/unit/: CMakeLists.txt  vec2_test.cpp  viewport_test.cpp
